更新添加任务
