# docs/swagger.yaml
@@ -248,10 +248,7 @@ definitions:
   login_log_server.SearchSSHLog:
     properties:
       Status:
-        enum:
-        - Success
-        - Failed
-        - All
+        description: 登陆状态
         type: string
       info:
         type: string
@@ -260,7 +257,6 @@ definitions:
       pageSize:
         type: integer
     required:
-    - Status
     - page
     - pageSize
     type: object
@@ -305,9 +301,30 @@ definitions:
         type: integer
       pageSize:
         type: integer
-    required:
-    - page
-    - pageSize
+    type: object
+  model.Patrol:
+    properties:
+      createTime:
+        type: string
+      createUser:
+        type: string
+      detail:
+        type: string
+      id:
+        type: integer
+    type: object
+  model.PatrolUser:
+    properties:
+      detail:
+        type: string
+      patrolId:
+        type: integer
+      patrolTime:
+        type: string
+      patrolUser:
+        type: string
+      result:
+        type: boolean
     type: object
   model.RecoverReq:
     properties:
@@ -872,6 +889,33 @@ paths:
     post:
       consumes:
       - application/json
+      description: 服务器登陆日志
+      parameters:
+      - description: status Success 或 Failed 或 不写 不写代表全部
+        in: body
+        name: loginLog
+        schema:
+          $ref: '#/definitions/login_log_server.SearchSSHLog'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/login_log_server.SSHLog'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 服务器登陆日志
+      tags:
+      - logs
+  /logs/panel:
+    post:
+      consumes:
+      - application/json
       description: 面板登陆日志
       parameters:
       - description: request
@@ -970,6 +1014,154 @@ paths:
       summary: 查询监控系统信息
       tags:
       - monitor
+  /monitor/user/del:
+    get:
+      consumes:
+      - application/json
+      description: 按照id删除完成的任务
+      parameters:
+      - description: 后端传的id
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 按照id删除完成的任务
+      tags:
+      - patrol
+  /patrol/add:
+    post:
+      consumes:
+      - application/json
+      description: 添加任务信息
+      parameters:
+      - description: 需要预留几个空让普通用户填的具体看model.PatrolUser时间不需要传
+        in: body
+        name: req
+        schema:
+          $ref: '#/definitions/model.Patrol'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 添加任务信息
+      tags:
+      - patrol
+  /patrol/del:
+    get:
+      consumes:
+      - application/json
+      description: 按照id删除任务
+      parameters:
+      - description: 后端传的id
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 按照id删除任务
+      tags:
+      - patrol
+  /patrol/sel:
+    post:
+      consumes:
+      - application/json
+      description: 查询任务信息
+      parameters:
+      - description: 分页
+        in: body
+        name: page
+        schema:
+          $ref: '#/definitions/model.PageInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 查询任务信息
+      tags:
+      - patrol
+  /patrol/user/add:
+    post:
+      consumes:
+      - application/json
+      description: 添加完成任务信息
+      parameters:
+      - description: 时间不需要传
+        in: body
+        name: req
+        schema:
+          $ref: '#/definitions/model.PatrolUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 添加完成任务信息
+      tags:
+      - patrol
+  /patrol/user/sel:
+    post:
+      consumes:
+      - application/json
+      description: 查询完成的任务信息
+      parameters:
+      - description: 分页
+        in: body
+        name: page
+        schema:
+          $ref: '#/definitions/model.PageInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: 查询完成的任务信息
+      tags:
+      - patrol
   /ssh/connect:
     get:
       consumes:
